<resources>
    <string name="app_name">Troll Monkey Hindi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="about">About us</string>
    <string name="add_remove">Add/Remove Pages</string>
    <string name="sharetheapp">Share App with Friends</string>

    <string name="app_share_message">ഈ ട്രോള് ആപ്പ് ഉപയോഗിച്ചാൽ നിങ്ങൾ ഞെട്ടും !!\n https://goo.gl/WBWL6a</string>

    <!--Permission Related-->
    <string name="storage_permission_prompt_message">Storage permission needed</string>
    <string name="permission_prompt_settings_return">From settings</string>

    <!--FullScreen-->
    <string name="coming_soon">Coming Soon</string>

    <!--InternetConnectionChecker-->
    <string name="alert_internet_title">No Internet Connection</string>
    <string name="alert_internet_message">Troll Master requires Internet connection to work. Please check your connection and try again</string>

    <!--PlayVideo-->
    <string name="alert_video_wait_message">Please pause till video loads completely for viewing without interruption.</string>

    <!--Helper Methods-->
    <string name="helper_downloading">Downloading…</string>
    <string name="toast_whatsapp_not_found">Whatsapp not installed</string>
    <string name="intent_title_share_images">Share images…</string>
    <string name="intent_title_share">Share…</string>
    <string name="download_success">Downloaded Successfully</string>
    <string name="error">Error</string>
    <string name="unsupported_error">Unsupported Format Error</string>

    <!--Layout-->
    <string name="open_link_in_browser">Open Link in Browser</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="retry">Retry</string>
    <string name="visitfb">View in FB</string>

    <!--PageNames-->
    <string name="pagename_1">ICU-International Chalu Union</string>
    <string name="pagename_2">Troll Malayalam</string>
    <string name="pagename_3">Troll Republic</string>
    <string name="pagename_5">Dank Memes Malayalam</string>
    <string name="pagename_8">School College Trolls</string>
    <string name="pagename_9">Troll Cricket Malayalam</string>
    <string name="pagename_10">Troll Football Malayalam</string>
    <string name="pagename_6">PSC Trolls</string>
    <string name="pagename_20">B-Tech Trolls</string>
    <string name="pagename_4">Malayalam Naughty Trolls</string>
    <string name="pagename_19">OutSpoken</string>
    <string name="pagename_24">Troll KTU</string>
    <string name="pagename_7">Kidilan Trolls</string>
    <string name="pagename_14">CinemaMixer</string>
    <string name="pagename_18">Troll Clashers Kerala</string>
    <string name="pagename_17">Troll MollyWood</string>
    <string name="pagename_13">Sheru Entertainment Hub</string>
    <string name="pagename_11">Troll Malayalam Cinema</string>
    <string name="pagename_23">Troll Religion</string>
    <string name="pagename_15">Cyber Trollers</string>
    <string name="pagename_25">Pravasi Trolls</string>
    <string name="pagename_12">Malayalam Troll Masters - MTM</string>
    <string name="pagename_16">ThengaKola</string>
    <string name="pagename_22">Troll Kerala</string>
    <string name="pagename_26">Malayalam Pling</string>
    <string name="pagename_21">Online Troll Media - OTM</string>

    <!--Settings-->
    <string name="aboutus">About Us</string>
    <string name="prefrence_rateapp_title">Let us know if you are enjoying!</string>
    <string name="preference_rateapp_dialogTitle">Rate Troll Master!</string>
    <string name="purchase_error">Error</string>
    <string name="purchase_already_owned">Error in purchase</string>
    <string name="captioninclude">Include caption in shared message</string>
    <string name="captionsummarychecked">Troll text is added to shared message</string>
    <string name="captionsummaryunchecked">Troll text is not added to shared message</string>
    <string name="preference_addRemove_dialogTitle">Add/Remove Pages</string>

    <string name="exit_toast">മുതലാളീ..</string>
    <string name="settings_purchased_info">മുതലാളി എന്നെ ഒന്ന് വാങ്ങിച്ചതാ .. മറന്നോ :)</string>
    <string name="settings_purchase_cancel">മുതലാളീ ..</string>
    <string name="settings_purchase_success">നന്ദിയുണ്ട് മുതലാളീ .. നന്ദിയുണ്ട് .</string>

</resources>
