<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/feed_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginLeft="@dimen/feed_item_margin"
        android:layout_marginRight="@dimen/feed_item_margin"
        android:layout_marginTop="@dimen/feed_item_margin"
        android:background="@drawable/bg_parent_rounded_corner"
        android:orientation="vertical"
        android:paddingBottom="@dimen/feed_item_padding_top_bottom"
        android:paddingTop="@dimen/feed_item_padding_top_bottom">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/feed_item_padding_left_right"
            android:paddingRight="@dimen/feed_item_padding_left_right">

            <ImageView
                android:id="@+id/pagepic"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="3dp"
                android:adjustViewBounds="true"
                android:background="@color/white"
                android:scaleType="fitXY"
                android:visibility="visible" />

            <TextView
                android:id="@+id/source_page_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/feed_item_profile_name"
                android:textColor="@color/uvv_black"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/caption"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/uvv_black"
            android:paddingBottom="@dimen/feed_item_status_pad_bottom"
            android:paddingLeft="@dimen/feed_item_status_pad_left_right"
            android:paddingRight="@dimen/feed_item_status_pad_left_right"
            android:paddingTop="@dimen/feed_item_status_pad_top" />

        <LinearLayout
            android:id="@+id/link_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/feed_image_margin"
            android:layout_marginRight="@dimen/feed_image_margin"
            android:background="@drawable/link_border"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/post_url"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:linksClickable="true"
                android:paddingLeft="@dimen/feed_item_status_pad_left_right"
                android:paddingRight="@dimen/feed_item_status_pad_left_right"
                android:textColor="@color/link" />

            <View
                android:id="@+id/separator1"
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/post_url_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/open_link_in_browser"
                android:textStyle="italic" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_margin="@dimen/feed_image_margin"
                android:adjustViewBounds="true"
                android:background="@color/white"
                android:scaleType="fitXY"
                android:visibility="visible" />


            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/play_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:visibility="gone"
                app:srcCompat="@drawable/play_video_icon" />

        </FrameLayout>

        <View
            android:id="@+id/separator2"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_margin="2dp"
            android:background="@android:color/darker_gray"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="3dp"
            android:paddingRight="3dp">

            <Button
                android:id="@+id/visitfb_main_button"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/visitfb" />

            <Button
                android:id="@+id/download_main_button"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/download" />

            <Button
                android:id="@+id/share_main_button"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/share" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>